--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@ body {
 }
 
 .wrapper-main-content {
-    height : 140vh;
+    height : auto;
     margin : 0;
 }
 
@@ -87,7 +87,7 @@ body {
 }
 .container-main-content {
     margin : 0;
-    height : 100%;
+    height : auto;
     width : 100%;
     background : rgba(10,10,20,0.7);
     backdrop-filter : blur(20px);
@@ -133,7 +133,7 @@ body {
 }
 .carousel-wrapper {
     width : 80vw;
-    height : 100vh;
+    height : auto;
     padding-top : 10vh;
     padding-bottom : 10vh;
     padding-left: 5vw;
@@ -148,7 +148,10 @@ body {
 }
 .carousel-item {
     width : 80vw;
-    height : 100vh;
+    height : 80vh;
+    overflow-y : scroll;
+    padding-top : 10vh;
+    padding-bottom : 5vh;
     text-align: center;
     display : grid;
     font-size : 2.8vh;
@@ -157,11 +160,21 @@ body {
     font-family : 'pusab';
     margin-left : 10vw;
     margin-right : 10vw;
-    overflow : hidden;
-    border-radius : 2vh;
+    overflow-x : hidden;
+    border-radius : 1vh;
     background : rgba(30,30,40,0.4);
     left : 0vw;
     transition : transform 0.5s ease-in-out;
+}
+.carousel-item::-webkit-scrollbar {
+    display : block;
+    width : 0.1vw;
+}
+.carousel-item::-webkit-scrollbar-thumb {
+    display : block;
+    background : rgba(240,240,255,0.5);
+    width : 0.01vw;
+    border-radius : 3vh;
 }
 .carousel-header {
     width : 100%;
@@ -171,6 +184,8 @@ body {
     text-align: center;
     justify-content: center;
     align-items : center;
+    padding-top : 2vh;
+    padding-bottom : 0.5vh;
 }
 .carousel-content {
     display : inline-flex;
@@ -178,11 +193,104 @@ body {
     padding-left : 5%;
     padding-right : 5%;
     margin: 0;
+    justify-content: center;
     height : auto;
+    text-align: center;
+    font-size : 2.25vh;
+    color : rgb(180,180,180);
+}
+.content-subheader {
+    display : inline-flex;
+    width : 90%;
+    padding-left : 5%;
+    padding-right : 5%;
+    margin: 0;
+    height : auto;
+    justify-content: center;
+    text-align: center;
+    font-size : 4vh;
+    line-height : 5vh;
+    padding-top : 4vh;
+    padding-bottom : 0.5vh;
 }
 .carousel-item:nth-child(1) {
     margin-left : 0;
 }
 .carousel-item:nth-child(n) {
     margin-right : 0;
+}
+
+.stafflist-wrapper {
+    width : inherit;
+    flex-wrap : wrap;
+    height : auto;
+    display : flex;
+    align-items: center;
+    justify-content: center;
+}
+.userwrapper-label {
+    width : 100vw;
+    height : auto;
+    text-align: center;
+    color : white;
+    font-family : 'pusab';
+    font-size : 4rem;
+    line-height: 2rem;
+    margin-top: 0;
+    padding : 0;
+    text-decoration: underline;
+    user-select: none;
+}
+.stafflist-label {
+    text-align: center;
+    color : white;
+    font-family : 'pusab';
+    font-size : 2rem;
+    text-decoration: underline;
+    user-select: none;
+}
+
+.user-container {
+    width : 10vw;
+    height : 26vh;
+    border : 2px solid white;
+    border-radius : 6px;
+    margin : 1rem;
+    display : grid;
+    align-items: center;
+    justify-items: center;
+    user-select: none;
+}
+.user-label {
+    color : white;
+    text-align: center;
+    margin-bottom: 0;
+    font-family : 'pusab';
+    font-size : 2vh;
+    width : 10vw;
+    user-select: none;
+}
+.user-icon {
+    width : 10vh;
+    height : 10vh;
+    border-radius : 50%;
+    border : 3px solid white;
+}
+.user-socials-wrapper {
+    width : 10vw;
+    height : 2vh;
+    display : flex;
+    align-items: center;
+    justify-content: center;
+}
+.user-socials {
+    width : 2vh;
+    height : 2vh;
+    margin : auto;
+    z-index : 3;
+    cursor : pointer;
+    transition : filter 0.2s;
+}
+.user-socials:hover {
+    filter : brightness(60%);
 }
