--- a/main.css
+++ b/main.css
@@ -264,7 +264,7 @@ body {
 }
 
 .user-container {
-    width : 10vw;
+    width : 15vh;
     height : 30vh;
     border : 2px solid white;
     border-radius : 6px;
@@ -279,6 +279,8 @@ body {
     text-align: center;
     margin-bottom: 0;
     font-family : 'pusab';
+    display : flex;
+    justify-content: center;
     font-size : 2vh;
     width : 10vw;
     user-select: none;
@@ -290,7 +292,7 @@ body {
     border : 3px solid white;
 }
 .user-socials-wrapper {
-    width : 10vw;
+    width : 15vh;
     height : 2vh;
     display : flex;
     align-items: center;
